--- a/matemaks-cracked.html
+++ b/matemaks-cracked.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-  <meta http-equiv="refresh" content="0; url = ./www.matemaks.pl/index.html" />
+  <meta http-equiv="refresh" content="0; url = ./www.matemaks.pll/index.html" />
   <title>Przekierowuję</title>
 </head><body></body></html>
